--- a/backend/.env
+++ b/backend/.env
@@ -1,7 +1,7 @@
 mailuser=shasankshasank500@gmail.com
 mailpass=lgxu trym qqdf ayhr
 mongoconnect=mongodb+srv://shasankgavini:Shasank%40123@cluster0.jhjnxcv.mongodb.net/oralvas
-origin=http://localhost:5173
+origin=https://oralvist.netlify.app/
 secretKey=Shasank@123
 bucket_name=oralvis28
 bucket_region=ap-southeast-2
